# kognitika

./: .dockerignore  .env.example  .firebaserc  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  GLOBAL_VISION.md  KOGNITIKA_CORE.md  README.md  TASK_LOG.md  TESTING_PLAN.md  docker-compose.yml  firebase-applet-config.json  firebase-blueprint.json  firebase.json  firestore.rules  index.html  metadata.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  security_spec.md  server.ts  tsconfig.json  vite.config.ts  vitest.config.ts
crates/kognitika-core/: Cargo.toml  README.md
crates/kognitika-core/src/: lib.rs
deployment/: deploy-m-kognitika.sh  nginx-m-kognitika.conf
docs/: Https   youtu.be NdU6UdUKaYc si=PdToiQJp7yBMyIze у....txt  KOGNITIKA_LONGTERM_ROADMAP.md  analyze-session-batch-analytics-contract.md  analyze-session-browser-worker-benchmark.md  analyze-session-wasm-benchmark.md  brain-id-identity.md  feedback-operations.md  firebase-rules-deploy.md  frame-budget-benchmark.md  kognitika-progress-article.html  logAI.md  mobile-rust-wasi-core-research.md  practice-completion-audit.md  pwa-offline-strategy.md  test_build c962878_ 14.06.2026.md  Ещё есть  .txt  Исследование рынка когнитивных D2C-приложений.md
prisma/: schema.prisma
public/: manifest.json  robots.txt  sitemap.xml  sw.js
scratch/: check_achievements.ts  check_users.ts  garden_index.md  index.html  kognitika_note.md  landing.css  list_users.ts  nginx_syntog.conf  problems_and_solutions.md  quartz.config.ts  query.sql
(+263 files in other folders)
