[package]
name = "kognitika-core"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "kognitika_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
